--- a/architecture/Linux-x86_64/py_env_multi_conda_env_export.yml
+++ b/architecture/Linux-x86_64/py_env_multi_conda_env_export.yml
@@ -43,6 +43,7 @@ dependencies:
       - anthropic==0.55.0
       - antlr4-python3-runtime==4.9.3
       - anyio==4.9.0
+      - arena-api==2.7.1
       - argon2-cffi==25.1.0
       - argon2-cffi-bindings==21.2.0
       - arrow==1.3.0
@@ -64,7 +65,7 @@ dependencies:
       - braincube-connector==2.7.0
       - build==1.2.2.post1
       - cachetools==5.5.2
-      - certifi==2025.6.15
+      - certifi==2025.7.14
       - cffi==1.17.1
       - chardet==5.2.0
       - charset-normalizer==3.4.2
@@ -318,7 +319,7 @@ dependencies:
       - pexpect==4.9.0
       - piconnect==0.12.4
       - pillow==11.2.1
-      - pip==25.1.1
+      - pip==25.2
       - pipdeptree==2.26.1
       - platformdirs==4.3.8
       - pluggy==1.6.0
@@ -351,6 +352,7 @@ dependencies:
       - pyjwt==2.10.1
       - pymage-size==1.7.1
       - pymodbustcp==0.3.0
+      - pymupdf==1.26.3
       - pynacl==1.5.0
       - pyowm==3.3.0
       - pyparsing==3.2.3
@@ -386,7 +388,7 @@ dependencies:
       - rich==14.0.0
       - rpds-py==0.25.1
       - rsa==4.9.1
-      - ruff==0.12.0
+      - ruff==0.12.1
       - safetensors==0.5.3
       - sam2==1.1.0
       - scikit-image==0.25.2
