--- a/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
+++ b/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
@@ -20,7 +20,6 @@ dependencies:
       - aiosqlite==0.21.0
       - aisuite==0.1.11
       - albucore==0.0.24
-      - albumentations==2.0.8
       - altair==5.5.0
       - annotated-types==0.7.0
       - ansicon==1.89.0
@@ -36,10 +35,12 @@ dependencies:
       - async-lru==2.0.5
       - async-timeout==5.0.1
       - attrs==25.3.0
+      - autocommand==2.2.2
       - azure-core==1.35.0
       - azure-identity==1.24.0
       - babel==2.17.0
       - backoff==2.2.1
+      - backports-tarfile==1.2.0
       - banks==2.2.0
       - bcrypt==4.3.0
       - beautifulsoup4==4.13.4
@@ -65,6 +66,7 @@ dependencies:
       - condense-json==0.1.3
       - contourpy==1.3.3
       - cryptography==45.0.6
+      - curl-cffi==0.13.0
       - cycler==0.12.1
       - cython==3.1.3
       - dataclasses-json==0.6.7
@@ -94,6 +96,7 @@ dependencies:
       - fonttools==4.59.1
       - fpdf2==2.8.4
       - fqdn==1.5.1
+      - frozendict==2.4.6
       - frozenlist==1.7.0
       - fsspec==2025.7.0
       - geojson==2.5.0
@@ -155,7 +158,9 @@ dependencies:
       - ipython-pygments-lexers==1.1.1
       - isoduration==20.11.0
       - itsdangerous==2.2.0
+      - jaraco-context==6.0.1
       - jaraco-functools==4.3.0
+      - jaraco-text==4.0.0
       - jax==0.7.1
       - jaxlib==0.7.1
       - jedi==0.19.2
@@ -243,10 +248,12 @@ dependencies:
       - mmh3==5.2.0
       - monotonic==1.6
       - more-itertools==10.7.0
+      - mplfinance==0.12.10b0
       - mpmath==1.3.0
       - msal==1.33.0
       - msal-extensions==1.3.1
       - multidict==6.6.4
+      - multitasking==0.0.12
       - mypy-extensions==1.1.0
       - narwhals==2.1.2
       - nbclient==0.10.2
@@ -298,6 +305,7 @@ dependencies:
       - parameterized==0.9.0
       - parso==0.8.5
       - pdf2image==1.17.0
+      - peewee==3.18.2
       - persist-queue==1.0.0
       - pillow==11.3.0
       - pip==25.2
@@ -449,6 +457,7 @@ dependencies:
       - wrapt==1.17.3
       - xlsxwriter==3.2.5
       - yarl==1.20.1
+      - yfinance==0.2.65
       - yoctopuce==2.1.6320
       - zipp==3.23.0
       - zstandard==0.24.0
