--- a/architecture/Linux-aarch64/py_env_wca_conda_env_export.yml
+++ b/architecture/Linux-aarch64/py_env_wca_conda_env_export.yml
@@ -17,12 +17,10 @@ dependencies:
   - libxcb=1.17.0=hf66535e_0
   - ncurses=6.5=h419075a_0
   - openssl=3.0.17=h998d150_0
-  - pandas-stubs=2.2.3.250308=py313hd43f75c_0
   - pthread-stubs=0.3=hfd63f10_1
   - python=3.13.5=h7ec2861_100_cp313
   - python_abi=3.13=0_cp313
   - readline=8.3=h886d1d0_0
-  - setuptools=78.1.1=py313hd43f75c_0
   - sqlite=3.50.2=h998d150_1
   - tk=8.6.15=h987d8db_0
   - wheel=0.45.1=py313hd43f75c_0
@@ -37,19 +35,20 @@ dependencies:
       - aiohttp==3.12.15
       - aiosignal==1.4.0
       - arena-api==2.7.1
-      - async-timeout==4.0.3
+      - async-timeout==5.0.1
       - attrs==25.3.0
       - blinker==1.9.0
-      - braincube-connector==2.7.0
+      - braincube-connector==2.8.0
       - cachetools==5.5.2
       - certifi==2025.8.3
-      - charset-normalizer==2.1.1
+      - charset-normalizer==3.4.3
       - click==8.2.1
       - contourpy==1.3.3
       - cycler==0.12.1
-      - dnspython==2.7.0
+      - dnspython==2.8.0
       - email-validator==2.3.0
       - filelock==3.19.1
+      - flake8==7.3.0
       - flask==3.1.2
       - fonttools==4.59.2
       - fpdf==1.7.2
@@ -79,6 +78,7 @@ dependencies:
       - lmdb==1.7.3
       - markupsafe==3.0.2
       - matplotlib==3.10.6
+      - mccabe==0.7.0
       - multidict==6.6.4
       - networkx==3.5
       - numpy==2.2.6
@@ -88,6 +88,7 @@ dependencies:
       - optype==0.13.4
       - packaging==25.0
       - pandas==2.3.2
+      - pandas-stubs==2.3.2.250827
       - persist-queue==1.0.0
       - persistqueue==0.1.6
       - pillow==11.3.0
@@ -99,6 +100,8 @@ dependencies:
       - psutil==7.0.0
       - pyasn1==0.6.1
       - pyasn1-modules==0.4.2
+      - pycodestyle==2.14.0
+      - pyflakes==3.4.0
       - pylucidio==2.4
       - pymage-size==1.7.1
       - pyparsing==3.2.3
@@ -111,10 +114,12 @@ dependencies:
       - reportlab==4.4.3
       - requests==2.32.5
       - rsa==4.9.1
+      - ruff==0.12.12
       - scikit-image==0.25.2
       - scikit-learn==1.7.1
       - scipy==1.16.1
       - scipy-stubs==1.16.1.1
+      - setuptools==80.9.0
       - six==1.17.0
       - threadpoolctl==3.6.0
       - tifffile==2025.8.28
