--- a/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
+++ b/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
@@ -14,12 +14,15 @@ dependencies:
   - xz=5.4.6=h8cc25b3_1
   - zlib=1.2.13=h8cc25b3_1
   - pip:
+      - absolufy-imports==0.3.1
+      - agno==1.8.1
       - aiohappyeyeballs==2.6.1
       - aiohttp==3.12.15
       - aiosignal==1.4.0
       - aiosqlite==0.21.0
       - aisuite==0.1.11
       - albucore==0.0.24
+      - alembic==1.16.5
       - altair==5.5.0
       - annotated-types==0.7.0
       - ansicon==1.89.0
@@ -35,6 +38,7 @@ dependencies:
       - async-lru==2.0.5
       - async-timeout==5.0.1
       - attrs==25.3.0
+      - authlib==1.6.3
       - autocommand==2.2.2
       - azure-core==1.35.0
       - azure-identity==1.24.0
@@ -59,6 +63,7 @@ dependencies:
       - click==8.2.1
       - click-default-group==1.2.4
       - click-option-group==0.5.7
+      - cloudpickle==3.1.1
       - clr-loader==0.2.7.post0
       - colorama==0.4.6
       - coloredlogs==15.0.1
@@ -71,10 +76,12 @@ dependencies:
       - cython==3.1.3
       - dataclasses-json==0.6.7
       - db-dtypes==1.4.2
+      - ddgs==9.5.5
       - debugpy==1.8.16
       - decorator==5.2.1
       - defusedxml==0.7.1
       - deprecated==1.2.18
+      - deprecation==2.1.0
       - dirtyjson==1.0.8
       - diskcache==5.6.3
       - distro==1.9.0
@@ -85,7 +92,7 @@ dependencies:
       - email-validator==2.2.0
       - eval-type-backport==0.2.2
       - executing==2.2.0
-      - fastapi==0.115.9
+      - fastapi==0.116.1
       - fastavro==1.12.0
       - fastjsonschema==2.21.2
       - filelock==3.19.1
@@ -104,19 +111,26 @@ dependencies:
       - gitpython==3.1.45
       - google-ai-generativelanguage==0.6.15
       - google-api-core==2.25.1
-      - google-api-python-client==2.135.0
+      - google-api-python-client==2.181.0
       - google-auth==2.40.3
       - google-auth-httplib2==0.2.0
       - google-auth-oauthlib==1.2.2
       - google-cloud-aiplatform==1.110.0
+      - google-cloud-appengine-logging==1.6.2
       - google-cloud-artifact-registry==1.16.1
+      - google-cloud-audit-log==0.3.2
       - google-cloud-bigquery==3.30.0
+      - google-cloud-bigtable==2.32.0
       - google-cloud-compute==1.35.0
       - google-cloud-core==2.4.3
+      - google-cloud-logging==3.12.1
       - google-cloud-pipeline-components==2.20.1
       - google-cloud-resource-manager==1.14.2
       - google-cloud-secret-manager==2.24.0
+      - google-cloud-spanner==3.57.0
+      - google-cloud-speech==2.33.0
       - google-cloud-storage==2.19.0
+      - google-cloud-trace==1.16.2
       - google-cloud-vision==3.10.2
       - google-crc32c==1.7.1
       - google-genai==1.2.0
@@ -124,9 +138,11 @@ dependencies:
       - google-resumable-media==2.7.2
       - googleapis-common-protos==1.70.0
       - gputil==1.4.0
+      - graphviz==0.21
       - greenlet==3.2.4
       - griffe==1.12.1
       - grpc-google-iam-v1==0.14.2
+      - grpc-interceptor==0.15.4
       - grpcio==1.74.0
       - grpcio-status==1.62.3
       - h11==0.14.0
@@ -139,6 +155,7 @@ dependencies:
       - huggingface-hub==0.34.4
       - humanfriendly==10.0
       - hydra-core==1.3.2
+      - icalendar==6.3.1
       - idna==3.10
       - ijson==3.4.0
       - imageio==2.37.0
@@ -194,12 +211,14 @@ dependencies:
       - kfp-server-api==2.3.0
       - kiwisolver==1.4.9
       - kubernetes==30.1.0
+      - lancedb==0.24.3
       - langchain==0.1.20
       - langchain-community==0.0.38
       - langchain-core==0.1.52
       - langchain-openai==0.1.6
       - langchain-text-splitters==0.0.2
-      - langsmith==0.1.129
+      - langgraph-sdk==0.2.4
+      - langsmith==0.1.147
       - lark==1.2.2
       - lazy-loader==0.4
       - lightning==2.5.3
@@ -233,6 +252,7 @@ dependencies:
       - llvmlite==0.44.0
       - lmdb==1.7.3
       - lxml==6.0.1
+      - mako==1.3.10
       - markdown==3.8.2
       - markdown-it-py==4.0.0
       - markupsafe==3.0.2
@@ -240,6 +260,7 @@ dependencies:
       - matplotlib==3.10.5
       - matplotlib-inline==0.1.7
       - mccabe==0.7.0
+      - mcp==1.13.1
       - mdurl==0.1.2
       - mistralai==1.5.2
       - mistune==3.1.3
@@ -284,6 +305,7 @@ dependencies:
       - openmeteo-requests==1.7.1
       - openmeteo-sdk==1.20.1
       - opentelemetry-api==1.27.0
+      - opentelemetry-exporter-gcp-trace==1.9.0
       - opentelemetry-exporter-otlp==1.27.0
       - opentelemetry-exporter-otlp-proto-common==1.27.0
       - opentelemetry-exporter-otlp-proto-grpc==1.27.0
@@ -292,11 +314,13 @@ dependencies:
       - opentelemetry-instrumentation-asgi==0.48b0
       - opentelemetry-instrumentation-fastapi==0.48b0
       - opentelemetry-proto==1.27.0
+      - opentelemetry-resourcedetector-gcp==1.9.0a0
       - opentelemetry-sdk==1.27.0
       - opentelemetry-semantic-conventions==0.48b0
       - opentelemetry-util-http==0.48b0
       - opt-einsum==3.4.0
       - orjson==3.11.2
+      - ormsgpack==1.10.0
       - overrides==7.7.0
       - packaging==23.2
       - pandas==2.3.2
@@ -315,6 +339,7 @@ dependencies:
       - plyfile==1.1.2
       - portalocker==3.2.0
       - posthog==5.4.0
+      - primp==0.15.0
       - prometheus-client==0.22.1
       - prompt-toolkit==3.0.51
       - propcache==0.3.2
@@ -357,6 +382,7 @@ dependencies:
       - python-dateutil==2.9.0.post0
       - python-dotenv==1.1.1
       - python-json-logger==3.3.0
+      - python-multipart==0.0.20
       - python-ulid==3.1.0
       - pythonnet==3.0.5
       - pytorch-lightning==2.5.3
@@ -373,7 +399,7 @@ dependencies:
       - reportlab==4.4.3
       - requests==2.32.5
       - requests-oauthlib==2.0.0
-      - requests-toolbelt==0.10.1
+      - requests-toolbelt==1.0.0
       - rfc3339-validator==0.1.4
       - rfc3986-validator==0.1.1
       - rfc3987-syntax==1.1.0
@@ -399,11 +425,14 @@ dependencies:
       - sniffio==1.3.1
       - soupsieve==2.7
       - sqlalchemy==2.0.43
+      - sqlalchemy-spanner==1.16.0
       - sqlite-fts4==1.0.3
       - sqlite-migrate==0.1b0
       - sqlite-utils==3.38
+      - sqlparse==0.5.3
+      - sse-starlette==3.0.2
       - stack-data==0.6.3
-      - starlette==0.45.3
+      - starlette==0.47.3
       - streamlit==1.48.1
       - stringzilla==3.12.6
       - striprtf==0.0.26
@@ -438,6 +467,7 @@ dependencies:
       - typing-inspect==0.9.0
       - typing-inspection==0.4.1
       - tzdata==2025.2
+      - tzlocal==5.3.1
       - umf==0.11.0
       - uri-template==1.3.0
       - uritemplate==4.2.0
@@ -456,6 +486,7 @@ dependencies:
       - wheel==0.45.1
       - wrapt==1.17.3
       - xlsxwriter==3.2.5
+      - xxhash==3.5.0
       - yarl==1.20.1
       - yfinance==0.2.65
       - yoctopuce==2.1.6320
