--- a/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
+++ b/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
@@ -213,36 +213,36 @@ dependencies:
       - lance-namespace==0.0.6
       - lance-namespace-urllib3-client==0.0.14
       - lancedb==0.25.0
-      - langchain==0.1.20
-      - langchain-community==0.0.38
-      - langchain-core==0.1.52
-      - langchain-openai==0.1.6
-      - langchain-text-splitters==0.0.2
+      - langchain==0.3.27
+      - langchain-community==0.3.27
+      - langchain-core==0.3.76
+      - langchain-openai==0.3.33
+      - langchain-text-splitters==0.3.11
       - langgraph-sdk==0.2.6
-      - langsmith==0.1.147
+      - langsmith==0.4.28
       - lark==1.2.2
       - lazy-loader==0.4
       - lightning==2.5.5
       - lightning-utilities==0.15.2
-      - llama-cloud==0.1.19
-      - llama-cloud-services==0.6.21
+      - llama-cloud==0.1.35
+      - llama-cloud-services==0.6.54
       - llama-cpp-python==0.3.6
-      - llama-index==0.11.23
-      - llama-index-agent-openai==0.3.4
-      - llama-index-cli==0.3.1
-      - llama-index-core==0.11.23
-      - llama-index-embeddings-openai==0.2.5
-      - llama-index-indices-managed-llama-cloud==0.6.0
+      - llama-index==0.12.52
+      - llama-index-agent-openai==0.4.12
+      - llama-index-cli==0.4.4
+      - llama-index-core==0.12.52.post1
+      - llama-index-embeddings-openai==0.3.1
+      - llama-index-indices-managed-llama-cloud==0.8.0
       - llama-index-instrumentation==0.4.0
       - llama-index-legacy==0.9.48.post3
-      - llama-index-llms-ollama==0.3.6
-      - llama-index-llms-openai==0.2.16
-      - llama-index-multi-modal-llms-openai==0.2.3
-      - llama-index-program-openai==0.2.0
-      - llama-index-question-gen-openai==0.2.0
-      - llama-index-readers-file==0.3.0
-      - llama-index-readers-llama-parse==0.3.0
-      - llama-index-workflows==2.2.0
+      - llama-index-llms-ollama==0.6.2
+      - llama-index-llms-openai==0.4.7
+      - llama-index-multi-modal-llms-openai==0.5.3
+      - llama-index-program-openai==0.3.2
+      - llama-index-question-gen-openai==0.3.1
+      - llama-index-readers-file==0.4.11
+      - llama-index-readers-llama-parse==0.4.0
+      - llama-index-workflows==1.3.0
       - llama-parse==0.6.21
       - llamaindex-py-client==0.1.19
       - llm==0.27.1
@@ -324,7 +324,7 @@ dependencies:
       - ormsgpack==1.10.0
       - overrides==7.7.0
       - packaging==23.2
-      - pandas==2.3.2
+      - pandas==2.2.3
       - pandas-gbq==0.29.2
       - pandocfilters==1.5.1
       - parameterized==0.9.0
