--- a/architecture/Linux-x86_64/py_env_multi_conda_env_export.yml
+++ b/architecture/Linux-x86_64/py_env_multi_conda_env_export.yml
@@ -1,18 +1,19 @@
 name: py_env_multi
 channels:
   - defaults
+  - conda-forge
 dependencies:
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=5.1=1_gnu
   - bzip2=1.0.8=h5eee18b_6
-  - ca-certificates=2025.2.25=h06a4308_0
+  - ca-certificates=2025.8.3=hbd8a1cb_0
   - expat=2.7.1=h6a678d5_0
   - ld_impl_linux-64=2.40=h12ee557_0
   - libffi=3.4.4=h6a678d5_1
   - libgcc-ng=11.2.0=h1234567_1
   - libgomp=11.2.0=h1234567_1
   - libmpdec=4.0.0=h5eee18b_0
-  - libstdcxx-ng=11.2.0=h1234567_1
+  - libstdcxx-ng=12.3.0=hc0a3c3a_7
   - libuuid=1.41.5=h5eee18b_0
   - libxcb=1.17.0=h9b100fa_0
   - ncurses=6.4=h6a678d5_0
@@ -40,7 +41,7 @@ dependencies:
       - altair==5.5.0
       - annotated-types==0.7.0
       - ansicon==1.89.0
-      - anthropic==0.64.0
+      - anthropic==0.67.0
       - antlr4-python3-runtime==4.9.3
       - anyio==4.10.0
       - arena-api==2.7.1
@@ -52,21 +53,22 @@ dependencies:
       - async-lru==2.0.5
       - async-timeout==5.0.1
       - attrs==25.3.0
-      - azure-core==1.35.0
-      - azure-identity==1.24.0
+      - azure-core==1.35.1
+      - azure-identity==1.25.0
       - babel==2.17.0
       - backoff==2.2.1
       - banks==2.2.0
       - bcrypt==4.3.0
-      - beautifulsoup4==4.13.4
+      - beautifulsoup4==4.13.5
       - bleach==6.2.0
-      - blessed==1.21.0
+      - blessed==1.22.0
       - blinker==1.9.0
-      - braincube-connector==2.7.0
+      - bottle==0.13.4
+      - braincube-connector==2.8.0
       - build==1.3.0
       - cachetools==5.5.2
       - certifi==2025.8.3
-      - cffi==1.17.1
+      - cffi==2.0.0
       - chardet==5.2.0
       - charset-normalizer==3.4.3
       - click==8.2.1
@@ -78,9 +80,10 @@ dependencies:
       - comm==0.2.3
       - condense-json==0.1.3
       - contourpy==1.3.3
-      - cryptography==45.0.6
+      - cryptography==45.0.7
+      - curl-cffi==0.13.0
       - cycler==0.12.1
-      - cython==3.1.3
+      - cython==3.1.4
       - dataclasses-json==0.6.7
       - db-dtypes==1.4.3
       - debugpy==1.8.16
@@ -90,14 +93,14 @@ dependencies:
       - dirtyjson==1.0.8
       - diskcache==5.6.3
       - distro==1.9.0
-      - dnspython==2.7.0
+      - dnspython==2.8.0
       - docstring-parser==0.17.0
       - docutils==0.22
       - durationpy==0.10
-      - email-validator==2.2.0
+      - email-validator==2.3.0
       - eval-type-backport==0.2.2
-      - executing==2.2.0
-      - fastapi==0.116.1
+      - executing==2.2.1
+      - fastapi==0.116.2
       - fastavro==1.12.0
       - fastjsonschema==2.21.2
       - filelock==3.19.1
@@ -105,11 +108,12 @@ dependencies:
       - flake8==7.3.0
       - flask==3.1.2
       - flatbuffers==25.2.10
-      - fonttools==4.59.1
+      - fonttools==4.59.2
       - fpdf2==2.8.4
       - fqdn==1.5.1
+      - frozendict==2.4.6
       - frozenlist==1.7.0
-      - fsspec==2025.7.0
+      - fsspec==2025.9.0
       - geojson==3.2.0
       - gitdb==4.0.12
       - gitpython==3.1.45
@@ -119,10 +123,10 @@ dependencies:
       - google-auth==2.40.3
       - google-auth-httplib2==0.2.0
       - google-auth-oauthlib==1.2.2
-      - google-cloud-aiplatform==1.110.0
+      - google-cloud-aiplatform==1.114.0
       - google-cloud-artifact-registry==1.16.1
-      - google-cloud-bigquery==3.36.0
-      - google-cloud-compute==1.35.0
+      - google-cloud-bigquery==3.37.0
+      - google-cloud-compute==1.37.0
       - google-cloud-core==2.4.3
       - google-cloud-pipeline-components==2.20.1
       - google-cloud-resource-manager==1.14.2
@@ -130,25 +134,25 @@ dependencies:
       - google-cloud-storage==2.19.0
       - google-cloud-vision==3.10.2
       - google-crc32c==1.7.1
-      - google-genai==1.31.0
+      - google-genai==1.37.0
       - google-generativeai==0.8.5
       - google-resumable-media==2.7.2
       - googleapis-common-protos==1.70.0
       - gputil==1.4.0
       - greenlet==3.2.4
-      - griffe==1.12.1
+      - griffe==1.14.0
       - grpc-google-iam-v1==0.14.2
-      - grpcio==1.74.0
+      - grpcio==1.75.0
       - grpcio-status==1.62.3
       - h11==0.16.0
       - h5py==3.14.0
-      - hf-xet==1.1.8
+      - hf-xet==1.1.10
       - httpcore==1.0.9
-      - httplib2==0.22.0
+      - httplib2==0.31.0
       - httptools==0.6.4
       - httpx==0.28.1
       - httpx-sse==0.4.1
-      - huggingface-hub==0.34.4
+      - huggingface-hub==0.35.0
       - humanfriendly==10.0
       - hydra-core==1.3.2
       - idna==3.10
@@ -164,37 +168,37 @@ dependencies:
       - iopath==0.1.10
       - iprogress==0.4
       - ipykernel==6.30.1
-      - ipython==9.4.0
+      - ipython==9.5.0
       - ipython-genutils==0.2.0
       - ipython-pygments-lexers==1.1.1
       - isoduration==20.11.0
       - itsdangerous==2.2.0
-      - jax==0.7.1
-      - jaxlib==0.7.1
+      - jax==0.7.2
+      - jaxlib==0.7.2
       - jedi==0.19.2
       - jh2==5.0.9
       - jinja2==3.1.6
       - jinxed==1.3.0
-      - jiter==0.10.0
-      - joblib==1.5.1
+      - jiter==0.11.0
+      - joblib==1.5.2
       - json-numpy==2.1.1
       - json5==0.12.1
       - jsonpatch==1.33
       - jsonpath-python==1.0.6
       - jsonpointer==3.0.0
       - jsonschema==4.25.1
-      - jsonschema-specifications==2025.4.1
+      - jsonschema-specifications==2025.9.1
       - jupyter-client==8.6.3
       - jupyter-contrib-core==0.4.2
       - jupyter-contrib-nbextensions==0.7.0
       - jupyter-core==5.8.1
       - jupyter-events==0.12.0
       - jupyter-highlight-selected-word==0.2.0
-      - jupyter-lsp==2.2.6
+      - jupyter-lsp==2.3.0
       - jupyter-nbextensions-configurator==0.6.4
       - jupyter-server==2.17.0
       - jupyter-server-terminals==0.5.3
-      - jupyterlab==4.4.6
+      - jupyterlab==4.4.7
       - jupyterlab-pygments==0.3.0
       - jupyterlab-server==2.27.3
       - kfp==2.13.0
@@ -203,14 +207,14 @@ dependencies:
       - kiwisolver==1.4.9
       - kubernetes==30.1.0
       - langchain==0.3.27
-      - langchain-community==0.3.27
-      - langchain-core==0.3.74
-      - langchain-openai==0.3.31
-      - langchain-text-splitters==0.3.9
-      - langsmith==0.4.16
+      - langchain-community==0.3.29
+      - langchain-core==0.3.76
+      - langchain-openai==0.3.33
+      - langchain-text-splitters==0.3.11
+      - langsmith==0.4.28
       - lark==1.2.2
       - lazy-loader==0.4
-      - lightning==2.5.3
+      - lightning==2.5.5
       - lightning-utilities==0.15.2
       - llama-cloud==0.1.26
       - llama-cloud-services==0.6.34
@@ -220,7 +224,7 @@ dependencies:
       - llama-index-core==0.12.52.post1
       - llama-index-embeddings-openai==0.3.1
       - llama-index-indices-managed-llama-cloud==0.7.7
-      - llama-index-instrumentation==0.4.0
+      - llama-index-instrumentation==0.4.1
       - llama-index-legacy==0.9.48.post4
       - llama-index-llms-ollama==0.6.2
       - llama-index-llms-openai==0.4.7
@@ -236,31 +240,33 @@ dependencies:
       - llm-anthropic==0.18
       - llm-claude-3==0.11
       - llm-gemini==0.25
-      - llm-ollama==0.13.0
+      - llm-ollama==0.14.0
       - llvmlite==0.44.0
       - lmdb==1.7.3
       - lxml==6.0.1
-      - markdown==3.8.2
+      - markdown==3.9
       - markdown-it-py==4.0.0
       - markupsafe==3.0.2
       - marshmallow==3.26.1
-      - matplotlib==3.10.5
+      - matplotlib==3.10.6
       - matplotlib-inline==0.1.7
       - mccabe==0.7.0
       - mdurl==0.1.2
-      - mistralai==1.9.7
-      - mistune==3.1.3
+      - mistralai==1.9.10
+      - mistune==3.1.4
       - mkl==2025.2.0
       - ml-dtypes==0.5.3
       - mmh3==5.2.0
       - monotonic==1.6
-      - more-itertools==10.7.0
+      - more-itertools==10.8.0
+      - mplfinance==0.12.10b0
       - mpmath==1.3.0
       - msal==1.33.0
       - msal-extensions==1.3.1
       - multidict==6.6.4
+      - multitasking==0.0.12
       - mypy-extensions==1.1.0
-      - narwhals==2.1.2
+      - narwhals==2.5.0
       - nbclient==0.10.2
       - nbconvert==7.16.6
       - nbformat==5.10.4
@@ -288,19 +294,19 @@ dependencies:
       - nvidia-nvjitlink-cu12==12.8.93
       - nvidia-nvtx-cu12==12.8.90
       - oauthlib==3.3.1
-      - ollama==0.5.3
+      - ollama==0.5.4
       - omegaconf==2.3.0
       - onnxruntime==1.22.1
-      - openai==1.101.0
+      - openai==1.107.3
       - opencv-contrib-python==4.12.0.88
       - opencv-python==4.12.0.88
       - opencv-python-headless==4.12.0.88
-      - openinference-instrumentation==0.1.37
-      - openinference-instrumentation-langchain==0.1.50
-      - openinference-instrumentation-llama-index==4.3.4
-      - openinference-instrumentation-openai==0.1.31
+      - openinference-instrumentation==0.1.38
+      - openinference-instrumentation-langchain==0.1.52
+      - openinference-instrumentation-llama-index==4.3.5
+      - openinference-instrumentation-openai==0.1.32
       - openinference-semantic-conventions==0.1.21
-      - openmeteo-requests==1.7.1
+      - openmeteo-requests==1.7.2
       - openmeteo-sdk==1.20.1
       - opentelemetry-api==1.34.1
       - opentelemetry-instrumentation==0.55b1
@@ -310,7 +316,7 @@ dependencies:
       - opentelemetry-semantic-conventions==0.55b1
       - opentelemetry-util-http==0.55b1
       - opt-einsum==3.4.0
-      - orjson==3.11.2
+      - orjson==3.11.3
       - overrides==7.7.0
       - packaging==25.0
       - pandas==2.2.3
@@ -318,22 +324,24 @@ dependencies:
       - pandocfilters==1.5.1
       - parameterized==0.9.0
       - parso==0.8.5
+      - peewee==3.18.2
       - persist-queue==1.0.0
       - pexpect==4.9.0
       - piconnect==0.12.4
       - pillow==11.3.0
       - pip==25.2
       - pipdeptree==2.28.0
-      - platformdirs==4.3.8
+      - platformdirs==4.4.0
       - pluggy==1.6.0
       - plyfile==1.1.2
       - portalocker==3.2.0
-      - posthog==6.6.1
+      - posthog==6.7.5
       - prometheus-client==0.22.1
-      - prompt-toolkit==3.0.51
+      - prompt-toolkit==3.0.52
       - propcache==0.3.2
       - proto-plus==1.26.1
       - protobuf==4.25.8
+      - proxy-tools==0.1.0
       - psutil==7.0.0
       - ptyprocess==0.7.0
       - pure-eval==0.2.3
@@ -343,45 +351,48 @@ dependencies:
       - pyasn1-modules==0.4.2
       - pybase64==1.4.2
       - pycodestyle==2.14.0
-      - pycparser==2.22
-      - pydantic==2.11.7
+      - pycparser==2.23
+      - pydantic==2.11.9
       - pydantic-core==2.33.2
       - pydantic-settings==2.10.1
       - pydata-google-auth==1.9.1
       - pydeck==0.9.1
       - pyflakes==3.4.0
-      - pygithub==2.7.0
+      - pygithub==2.8.1
       - pygments==2.19.2
       - pyjwt==2.10.1
+      - pylucidio==2.4
       - pymage-size==1.7.1
       - pymodbustcp==0.3.0
-      - pymupdf==1.26.3
-      - pynacl==1.5.0
-      - pyowm==3.4.0
-      - pyparsing==3.2.3
+      - pymupdf==1.26.4
+      - pynacl==1.6.0
+      - pyowm==3.5.0
+      - pyparsing==3.2.4
       - pypdf==5.9.0
       - pypika==0.48.9
       - pyproject-hooks==1.2.0
+      - pyqt6-qt6==6.9.2
+      - pyqt6-sip==13.10.2
       - pyqtree==1.0.0
       - pyreadline3==3.5.4
-      - pyright==1.1.404
+      - pyright==1.1.405
       - pyserial==3.5
       - pysocks==1.7.1
-      - pytest==8.4.1
+      - pytest==8.4.2
       - python-dateutil==2.9.0.post0
       - python-dotenv==1.1.1
       - python-json-logger==3.3.0
       - python-ulid==3.1.0
       - pythonnet==3.0.5
-      - pytorch-lightning==2.5.3
+      - pytorch-lightning==2.5.5
       - pytz==2025.2
       - pyyaml==6.0.2
       - pyzbar==0.1.9
-      - pyzmq==27.0.2
+      - pyzmq==27.1.0
       - qh3==1.5.4
       - qrcode==8.2
       - referencing==0.36.2
-      - regex==2025.7.34
+      - regex==2025.9.1
       - reportlab==4.4.3
       - requests==2.32.5
       - requests-oauthlib==2.0.0
@@ -390,34 +401,34 @@ dependencies:
       - rfc3986-validator==0.1.1
       - rfc3987-syntax==1.1.0
       - rich==14.1.0
-      - rpds-py==0.27.0
+      - rpds-py==0.27.1
       - rsa==4.9.1
-      - ruff==0.12.10
+      - ruff==0.13.0
       - safetensors==0.6.2
       - sam2==1.1.0
       - scikit-image==0.25.2
-      - scikit-learn==1.7.1
-      - scipy==1.16.1
+      - scikit-learn==1.7.2
+      - scipy==1.16.2
       - segment-anything==1.0
       - send2trash==1.8.3
       - sentence-transformers==5.1.0
       - setuptools==80.9.0
       - shapely==2.1.1
       - shellingham==1.5.4
-      - simsimd==6.5.1
+      - simsimd==6.5.3
       - six==1.17.0
       - smmap==5.0.2
       - snakeviz==2.2.2
       - sniffio==1.3.1
-      - soupsieve==2.7
+      - soupsieve==2.8
       - sqlalchemy==2.0.43
       - sqlite-fts4==1.0.3
       - sqlite-migrate==0.1b0
       - sqlite-utils==3.38
       - stack-data==0.6.3
-      - starlette==0.47.2
-      - streamlit==1.48.1
-      - stringzilla==3.12.6
+      - starlette==0.47.3
+      - streamlit==1.49.1
+      - stringzilla==4.0.10
       - striprtf==0.0.26
       - sympy==1.14.0
       - tabulate==0.9.0
@@ -426,25 +437,25 @@ dependencies:
       - tenacity==8.5.0
       - terminado==0.18.1
       - threadpoolctl==3.6.0
-      - tifffile==2025.6.11
+      - tifffile==2025.9.9
       - tiktoken==0.11.0
       - timm==1.0.19
       - tinycss2==1.4.0
-      - tokenizers==0.21.4
+      - tokenizers==0.22.0
       - toml==0.10.2
       - tomli-w==1.2.0
       - tomlkit==0.13.3
       - torch==2.8.0
-      - torchmetrics==1.8.1
+      - torchmetrics==1.8.2
       - torchvision==0.23.0
       - tornado==6.5.2
       - tqdm==4.67.1
       - traitlets==5.14.3
-      - transformers==4.55.4
+      - transformers==4.56.1
       - triton==3.4.0
-      - typer==0.16.1
+      - typer==0.17.4
       - types-python-dateutil==2.9.0.20250822
-      - typing-extensions==4.14.1
+      - typing-extensions==4.15.0
       - typing-inspect==0.9.0
       - typing-inspection==0.4.1
       - tzdata==2025.2
@@ -452,7 +463,7 @@ dependencies:
       - uri-template==1.3.0
       - uritemplate==4.2.0
       - urllib3==2.5.0
-      - urllib3-future==2.13.905
+      - urllib3-future==2.13.909
       - uvicorn==0.35.0
       - uvloop==0.21.0
       - wassima==2.0.1
@@ -465,10 +476,11 @@ dependencies:
       - websockets==15.0.1
       - werkzeug==3.1.3
       - wrapt==1.17.3
-      - xgboost==3.0.4
-      - xlsxwriter==3.2.5
+      - xgboost==3.0.5
+      - xlsxwriter==3.2.9
       - yarl==1.20.1
+      - yfinance==0.2.65
       - yoctopuce==2.1.6320
       - zipp==3.23.0
-      - zstandard==0.24.0
+      - zstandard==0.25.0
 prefix: /home/mmaresch/miniconda3/envs/py_env_multi
