--- a/architecture/Linux-x86_64/py_env_multi_conda_env_export.yml
+++ b/architecture/Linux-x86_64/py_env_multi_conda_env_export.yml
@@ -48,7 +48,7 @@ dependencies:
       - argon2-cffi==25.1.0
       - argon2-cffi-bindings==25.1.0
       - arrow==1.3.0
-      - asgiref==3.9.1
+      - asgiref==3.8.1
       - asttokens==3.0.0
       - async-lru==2.0.5
       - async-timeout==5.0.1
@@ -321,6 +321,7 @@ dependencies:
       - packaging==25.0
       - pandas==2.2.3
       - pandas-gbq==0.29.2
+      - pandas-stubs==2.3.2.250926
       - pandocfilters==1.5.1
       - parameterized==0.9.0
       - parso==0.8.5
@@ -455,6 +456,7 @@ dependencies:
       - triton==3.4.0
       - typer==0.17.4
       - types-python-dateutil==2.9.0.20250822
+      - types-pytz==2025.2.0.20250809
       - typing-extensions==4.15.0
       - typing-inspect==0.9.0
       - typing-inspection==0.4.1
